moved applicationsOpen to the general config file

--- a/new-dti-website-redesign/config.json
+++ b/new-dti-website-redesign/config.json
@@ -1,5 +1,6 @@
 {
   "semester": "Spring 2025",
+  "applicationsOpen": false,
   "applicationDeadline": "January 30, 2025 11:59:59 PM",
   "freshmanAppDeadline": "October 24, 2024 11:59:59 PM",
   "applicationLink": "https://docs.google.com/forms/d/e/1FAIpQLSc_Tp8BAM0ad-x5GmCRN_YgPOUwRjQynbGLuqQ28932zfwXrg/viewform?usp=sf_link",
