--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.4",
     "lint-staged": "^11.2.0",
+    "node-gyp": "11.2.0",
     "prettier": "^3.2.5",
     "typescript": "^5.2.2"
   },
