remove application timeline

--- a/new-dti-website/config.json
+++ b/new-dti-website/config.json
@@ -1,112 +1,11 @@
 {
-  "semester": "Spring 2025",
+  "semester": "Fall 2025",
   "applicationDeadline": "January 30, 2025 11:59:59 PM",
   "freshmanAppDeadline": "October 24, 2024 11:59:59 PM",
   "applicationLink": "https://docs.google.com/forms/d/e/1FAIpQLSc_Tp8BAM0ad-x5GmCRN_YgPOUwRjQynbGLuqQ28932zfwXrg/viewform?usp=sf_link",
   "coffeeChatLink": "https://docs.google.com/spreadsheets/d/e/2PACX-1vTMT8UIUtzHdDPFNd_dpKgGwYukhaj0Frg9s0-RgssfoqftBZQgNAhRMD4AFQ-3sKrhCuNq6VmQX5kX/pubhtml?gid=0&single=true",
   "coffeeChatFormLink": "https://forms.gle/ijdQtbuc3Sb6BQNY9",
   "donationLink": "https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&bledit=1&dids=2215",
-  "events": [
-    {
-      "title": "Applications open!",
-      "description": "We're welcoming any and all students who are looking to make a difference through tech. Applicants are not considered on a rolling basis.",
-      "location": "Google Form Application",
-      "type": "application",
-      "link": "https://docs.google.com/forms/d/e/1FAIpQLSc_Tp8BAM0ad-x5GmCRN_YgPOUwRjQynbGLuqQ28932zfwXrg/viewform?usp=sf_link",
-      "freshmen": { "date": "August 21", "isTentative": false },
-      "upperclassmen": { "date": "August 21", "isTentative": false },
-      "spring": { "date": "January 3", "isTentative": false }
-    },
-    {
-      "title": "Information Session 1",
-      "description": "Come join us for a session to learn about DTI, our goals, and our subteams. There will be time to chat with DTI members of all roles after! And if you can’t make this session, check out the Information Session 2 below.",
-      "location": "Olin Hall 155",
-      "type": "info",
-      "freshmen": { "date": "September 30", "isTentative": false, "time": "5-6PM" },
-      "upperclassmen": { "date": "August 27", "isTentative": false, "time": "5-6PM" },
-      "spring": { "date": "January 23", "isTentative": false, "time": "6:00-7:30PM" }
-    },
-    {
-      "title": "Information Session 2",
-      "description": "Another session to learn about DTI and to chat with our members. All applicants are encouraged to attend one of the information sessions.",
-      "location": "Olin Hall 155",
-      "type": "info",
-      "freshmen": { "date": "October 12", "isTentative": false, "time": "11AM-12PM" },
-      "upperclassmen": { "date": "September 2", "isTentative": false, "time": "6:30-7:30PM" },
-      "spring": { "date": "January 27", "isTentative": false, "time": "5:30-7:30PM" }
-    },
-    {
-      "title": "ACSU x DTI Resume Review Session",
-      "description": "Helping students prepare for our application by reviewing their resumes and giving them interview tips!",
-      "location": "Upson 142",
-      "type": "application",
-      "freshmen": { "date": "January 1", "isTentative": true },
-      "upperclassmen": { "date": "January 1", "isTentative": true },
-      "spring": { "date": "January 23", "isTentative": false, "time": "5:00-6:00PM" }
-    },
-    {
-      "title": "WICC x DTI Boba Chats",
-      "description": "Opportunity for WICC and DTI members to learn about each other and the DTI application process in a smaller, more intimate setting!",
-      "location": "Upson 216",
-      "type": "info",
-      "freshmen": { "date": "January 1", "isTentative": true },
-      "upperclassmen": { "date": "January 1", "isTentative": true },
-      "spring": { "date": "January 24", "isTentative": false, "time": "5:00-6:15PM" }
-    },
-    {
-      "title": "URMC x DTI Recruitment Workshop",
-      "description": "Includes collaborative discussions on diversity in both DTI and URMC, as well as preparing for DTI's application with resume reviews and interview tips!",
-      "location": "Phillips 213",
-      "type": "info",
-      "freshmen": { "date": "January 1", "isTentative": true },
-      "upperclassmen": { "date": "January 1", "isTentative": true },
-      "spring": { "date": "January 27", "isTentative": false, "time": "4:30-5:30PM" }
-    },
-    {
-      "title": "Get to Know the DTI'ers",
-      "description": "Get to know DTI and its members through casual chats, games, product demos, and get your resume reviewed!",
-      "location": "Willard Straight Hall 407 (Memorial Room)",
-      "type": "info",
-      "freshmen": { "date": "January 1", "isTentative": true },
-      "upperclassmen": { "date": "January 1", "isTentative": true },
-      "spring": { "date": "January 29", "isTentative": false, "time": "6:30-8:00PM" }
-    },
-    {
-      "title": "Applications due",
-      "description": "We're welcoming any and all students who are looking to make a difference through tech. Applicants are not considered on a rolling basis.",
-      "location": "Google Form Application",
-      "type": "deadline",
-      "link": "https://docs.google.com/forms/d/e/1FAIpQLSc_Tp8BAM0ad-x5GmCRN_YgPOUwRjQynbGLuqQ28932zfwXrg/viewform?usp=sf_link",
-      "freshmen": { "date": "October 17", "isTentative": false },
-      "upperclassmen": { "date": "September 4", "isTentative": false },
-      "spring": { "date": "January 30", "isTentative": false }
-    },
-    {
-      "title": "Behavioral Interviews",
-      "description": "Prepare to talk about past projects, teamwork experiences, and your motivation for joining DTI.",
-      "location": "Varying locations",
-      "type": "interview",
-      "freshmen": { "date": "October 22-24", "isTentative": true },
-      "upperclassmen": { "date": "September 10-12", "isTentative": false },
-      "spring": { "date": "February 1-3", "isTentative": true }
-    },
-    {
-      "title": "Technical Interviews",
-      "description": "Demonstrate your technical skills through problem-solving challenges relevant to your subteam.",
-      "location": "Varying locations",
-      "type": "interview",
-      "freshmen": { "date": "October 26-28", "isTentative": true },
-      "upperclassmen": { "date": "September 14-16", "isTentative": false },
-      "spring": { "date": "February 9-11", "isTentative": true }
-    },
-    {
-      "title": "Offers extended",
-      "description": "Offers get sent out!",
-      "type": "offer",
-      "freshmen": { "date": "October 30", "isTentative": false },
-      "upperclassmen": { "date": "September 18", "isTentative": false },
-      "spring": { "date": "February 12", "isTentative": false }
-    }
-  ],
+  "events": [],
   "trends_instructors": ["ow39", "sci24", "cc2785"]
 }
