--- a/new-dti-website/package.json
+++ b/new-dti-website/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "format": "yarn prettier --write .",
     "format:check": "yarn prettier --check .",
-    "pull-from-idol": "tsx pull-from-idol.ts"
+    "pull-from-idol": "tsx pull-from-idol.ts",
+    "member-archive": "tsx member-archive.ts"
   },
   "dependencies": {
     "@next/font": "^13.5.4",
