--- a/new-dti-website/package.json
+++ b/new-dti-website/package.json
@@ -10,7 +10,7 @@
     "format": "yarn prettier --write .",
     "format:check": "yarn prettier --check .",
     "pull-from-idol": "tsx pull-from-idol.ts",
-    "member-archive": "tsx member-archive.ts"
+    "update-alumni": "tsx update-alumni.ts"
   },
   "dependencies": {
     "@next/font": "^13.5.4",
