[New Website] Quick fixes

--- a/new-dti-website-redesign/config.json
+++ b/new-dti-website-redesign/config.json
@@ -7,5 +7,5 @@
   "coffeeChatLink": "https://docs.google.com/spreadsheets/d/e/2PACX-1vTMT8UIUtzHdDPFNd_dpKgGwYukhaj0Frg9s0-RgssfoqftBZQgNAhRMD4AFQ-3sKrhCuNq6VmQX5kX/pubhtml?gid=0&single=true",
   "coffeeChatFormLink": "https://forms.gle/ijdQtbuc3Sb6BQNY9",
   "donationLink": "https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&bledit=1&dids=2215",
-  "trends_instructors": ["ow39", "sci24", "cc2785"]
+  "trends_instructors": ["sci24", "cc2785", "jxc6"]
 }
