--- a/new-dti-website-redesign/package.json
+++ b/new-dti-website-redesign/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "yarn prettier --write .",
-    "format:check": "yarn prettier --check ."
+    "format:check": "yarn prettier --check .",
+    "update-alumni": "tsx update-alumni.ts"
   },
   "dependencies": {
     "next": "15.2.3",
