add pull from idol to package.json

--- a/new-dti-website-redesign/package.json
+++ b/new-dti-website-redesign/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "format": "yarn prettier --write .",
     "format:check": "yarn prettier --check .",
+    "pull-from-idol": "tsx pull-from-idol.ts",
     "update-alumni": "tsx update-alumni.ts"
   },
   "dependencies": {
