--- a/new-dti-website-redesign/package.json
+++ b/new-dti-website-redesign/package.json
@@ -13,7 +13,9 @@
     "update-alumni": "tsx update-alumni.ts"
   },
   "dependencies": {
+    "@octokit/rest": "^21.0.2",
     "next": "15.2.3",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
