--- a/new-dti-website-redesign/package.json
+++ b/new-dti-website-redesign/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint",
     "format": "yarn prettier --write .",
     "format:check": "yarn prettier --check .",
+    "pull-from-idol": "tsx pull-from-idol.ts",
     "update-alumni": "tsx update-alumni.ts"
   },
   "dependencies": {
+    "@octokit/rest": "^22.0.0",
     "next": "15.2.3",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
