update trends app link to fa25

--- a/new-dti-website-redesign/src/app/course/data/config.json
+++ b/new-dti-website-redesign/src/app/course/data/config.json
@@ -1,4 +1,4 @@
 {
-  "trendsApplicationLink": "https://forms.gle/nshadTFzkzTenvjv8",
+  "trendsApplicationLink": "https://forms.gle/TDdt18P3mVmeFZAaA",
   "trendsWebsiteLink": "https://webdev.cornelldti.org"
 }
