--- a/new-dti-website-redesign/config.json
+++ b/new-dti-website-redesign/config.json
@@ -3,7 +3,7 @@
   "applicationDeadline": "January 29, 2026 11:59:59 PM",
   "freshmanAppDeadline": "October 16, 2025 11:59:59 PM",
   "applicationLink": "https://docs.google.com/forms/d/e/1FAIpQLSevfPth9lqMn910ZTuQPhkuWTnPL5nlJ_xw0js1nX7BZxw3aQ/viewform?usp=sharing&ouid=104812224098535012084",
-  "coffeeChatLink": "https://docs.google.com/spreadsheets/d/e/2PACX-1vQJas_IKx5VSzQm7kyhsH4ceexTiM-e7BxJuhInANu2aii8t6xf6GwiR2MUyHMG7b9FwqCJ0SCxm_JE/pubhtml",
+  "coffeeChatLink": "https://docs.google.com/spreadsheets/d/17xJt9po88coB98fY1sYf8YxNmR8gRw1Io6kOQ92_wxo/edit?usp=sharing",
   "coffeeChatFormLink": "https://forms.gle/ijdQtbuc3Sb6BQNY9",
   "donationLink": "https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&bledit=1&dids=2215",
   "trends_instructors": ["sci24", "cc2785", "jxc6"]
