update trends link, timeline, and instructors

--- a/new-dti-website-redesign/src/app/course/data/config.json
+++ b/new-dti-website-redesign/src/app/course/data/config.json
@@ -1,4 +1,4 @@
 {
-  "trendsApplicationLink": "https://forms.gle/TDdt18P3mVmeFZAaA",
+  "trendsApplicationLink": "https://forms.gle/dncsyqkkrZF5t3ob9",
   "trendsWebsiteLink": "https://webdev.cornelldti.org"
 }
