--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "export-to-csv": "^0.2.1",
     "firebase": "^9.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.488.0",
     "luxon": "^3.3.0",
     "next": "^12.0.1",
@@ -27,6 +28,7 @@
     "react-avatar-editor": "^11.1.0",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^4.2.1",
     "react-markdown": "^7.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/luxon": "^3.2.0",
     "@types/styled-components": "^5.1.24"
   }
