--- a/backend/package.json
+++ b/backend/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@types/diff": "^5.0.1",
+    "@types/glob": "^9.0.0",
     "@types/luxon": "^3.2.0",
     "esbuild": "^0.13.3",
     "esbuild-runner": "^2.2.1"
