--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "express": "^4.17.1",
     "express-winston": "^4.2.0",
     "firebase-admin": "^11.8.0",
+    "glob": "^13.0.1",
     "googleapis": "^100.0.0",
     "lodash.isequal": "^4.5.0",
     "luxon": "^3.3.0",
