--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,8 @@
     "outDir": "build",
     "strict": true,
     "target": "es6",
-    "lib": ["ESNext", "DOM"]
+    "lib": ["ESNext", "DOM"],
+    "skipLibCheck": true
   },
   "include": ["src/**/*"]
 }
