--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,8 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.2",
-    "@types/react": "^17.0.27",
     "@types/react-avatar-editor": "^10.3.6",
     "@types/react-datepicker": "^4.1.7",
-    "@types/react-dom": "^17.0.9",
     "axios": "^0.22.0",
     "common-types": "1.0.0",
     "csvtojson": "^2.0.10",
@@ -31,7 +29,7 @@
     "react-leaflet": "^4.2.1",
     "react-markdown": "^7.0.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4",
+    "semantic-ui-react": "^1.3.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.9.5"
   },
@@ -41,6 +39,10 @@
     "tsc": "tsc"
   },
   "proxy": "http://localhost:9000",
+  "resolutions": {
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -56,6 +58,8 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
     "@types/luxon": "^3.2.0",
+    "@types/react": "17.0.91",
+    "@types/react-dom": "17.0.26",
     "@types/styled-components": "^5.1.24"
   }
 }
