--- a/new-dti-website/tsconfig.json
+++ b/new-dti-website/tsconfig.json
@@ -22,7 +22,7 @@
       "@/*": ["./*"]
     },
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
