update trends instructor

--- a/new-dti-website-redesign/config.json
+++ b/new-dti-website-redesign/config.json
@@ -6,5 +6,5 @@
   "coffeeChatLink": "https://docs.google.com/spreadsheets/d/e/2PACX-1vSl_dZWXmqItrEDLXxcfYXF_fWgv6L_xDjgT5JPeRR0stLSvCjC8440yJwICSJl6yC-Rr7Zqk_UDXcr/pubhtml",
   "coffeeChatFormLink": "https://forms.gle/ijdQtbuc3Sb6BQNY9",
   "donationLink": "https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&bledit=1&dids=2215",
-  "trends_instructors": ["hyz4", "cc2785", "es999"]
+  "trends_instructors": ["hyz4", "es999", "lsp75"]
 }
