fixed hover states and comment cleanup

--- a/new-dti-website-redesign/src/app/course/data/config.json
+++ b/new-dti-website-redesign/src/app/course/data/config.json
@@ -1,6 +1,6 @@
 {
   "trendsApplicationLink": "https://forms.gle/dncsyqkkrZF5t3ob9",
   "trendsWebsiteLink": "https://webdev.cornelldti.org",
-  "productStrategyApplicationLink": "https://classes.cornell.edu/browse/roster/SP26/class/INFO/1998#:~:text=18519https://classes.cornell.edu/browse/roster/SP26/class/INFO/1998",
+  "productStrategyApplicationLink": "https://classes.cornell.edu/browse/roster/SP26/class/INFO/1998",
   "productStrategyWebsiteLink": "https://numerous-name-b50.notion.site/intro-to-product-strategy"
 }
